# DataVisuals

./: .gitignore  AI_CHAT_ENHANCEMENTS_SUMMARY.md  AI_DESIGNER_INVALID_BLUEPRINT_DEBUG.md  AI_STRATEGY_QUESTIONNAIRE.txt  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_INTEGRATION_DIAGRAM.md  ARCHITECTURE_VALIDATION.md  CHART_GENERATION_FIX_COMPLETE.md  CHART_HYDRATION_BUGS_FIXED.md  CHART_PERSISTENCE_FIX.md  CHAT_BLANK_MESSAGES_FIX.md  CHAT_ENDPOINT_404_FIX.md  CHAT_ENHANCEMENT_COMPLETE_GUIDE.md  CHAT_FIX_TEST_GUIDE.md  CHAT_IMPROVEMENTS.md  CHAT_MARKDOWN_AND_RERUN_FIX.md  CHAT_REFRESH_AND_RESPONSE_FIX.md  CIRCULAR_IMPORT_FIX.md  CURRENT_STATE_SUMMARY.md  Cusor_plan.md  DASHBOARD_BEFORE_AFTER.md  DASHBOARD_UPDATE_SUMMARY.md  DATA_ANALYST_ASSESSMENT.md  DataSage_Backend_Documentation.md  FLOW_DIAGRAMS.md  FRONTEND_BACKEND_INTEGRATION_PLAN.md  INTELLIGENT_KPI_GENERATION.md  Next-Generation Intelligence Dashboard_ Architectural UI_UX Design System for Advanced Data Analytics.txt  OPENROUTER_ONLY_MODE.md  PRODUCTION_FIXES_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  REAL_WORLD_PROBLEMS.md  RUTHLESS_REVIEW_UPGRADE.md  Ruthless_Review.md  SETUP.md  WS_STREAMING_TEST.md  ai-chat-redesign.md  generate_diagrams.py  (+8 more)
version2/backend/: .dockerignore  .env.example  .requirements_checksum  AI_VS_HUMAN_COMPARISON.md  BACKEND_ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  CHART_INTELLIGENCE_EXPLAINED.md  CHART_INTELLIGENCE_QUICKSTART.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  PRODUCTION_PIPELINE_SUMMARY.md  QUIS_FAISS_README.md  README.md  TASKS_ENHANCEMENT_PLAN.md  config.py  correction_memory.json  database.py  (+12 more)
(+1272 files in other folders)
